--- a/css/styles.css
+++ b/css/styles.css
@@ -51,3 +51,17 @@ nav ul li a{
     padding-top: 5px;
     margin: 0 auto;
 }
+
+    .centro {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
+
+/* Texto */
+p {
+    text-indent: 50px;
+    text-align: justify;
+   color: black;
+}
