--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,31 @@ nav ul li a{
     text-transform: uppercase;
     font-weight: bold;
 }
+/*tabela*/
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+}
+th, td {
+    text-align: center;
+    padding: 16px;
+}
+th: :first-child, td: :first-child {
+    text-aling:left
+}
+
+tr:nth-child(even){
+    background-color: #f2f2f2;
+}
+.fa-check {
+    color: green;
+}
+.fa-remove{
+    color: red;
+}
+
 
 .tabRota1 {
     padding-top: 10px;
@@ -52,16 +77,26 @@ nav ul li a{
     margin: 0 auto;
 }
 
-    .centro {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
-    }
-
+.centro {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    /*width: 50%;*/
+}
+.footer {
+    position: relative;
+    left: 0;
+    height: 100px;
+    width: 100%;
+    background-color: #473b82;
+    text-align: center;
+}
 /* Texto */
 p {
     text-indent: 50px;
     text-align: justify;
-   color: black;
+    Color: black;
+    font-family:'roboto';
+    margin-left: 50px;
+    margin-right: 50px;
 }
