--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ tr:nth-child(even){
     color: red;
 }
 
-
+/*classes*/
 .tabRota1 {
     padding-top: 10px;
     margin: 0 auto;
@@ -91,6 +91,11 @@ tr:nth-child(even){
     background-color: #473b82;
     text-align: center;
 }
+.title-table{
+    text-align: center;
+    text-decoration-style: solid;
+    color: red;
+}
 /* Texto */
 p {
     text-indent: 50px;
@@ -100,3 +105,52 @@ p {
     margin-left: 50px;
     margin-right: 50px;
 }
+ /*Formulários*/
+ input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+  input[type=email], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+input[type=number], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
