--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ p {
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #a04545;
   }
   
   .container {
