--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ p {
   }
   
   input[type=submit] {
-    background-color: #4CAF50;
+    background-color: #af4c54;
     color: white;
     padding: 12px 20px;
     border: none;
